[build-system]
requires = ['setuptools >= 42', 'setuptools_scm[toml] >= 3.4', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'src/falcon_oas/__version__.py'
write_to_template = "__version__ = '{version}'\n"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
